# lumina-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ext/: CMakeLists.txt
scenes/pa1/: bunny.exr  bunny.xml
scenes/pa4/cbox/: cbox-distributed.exr  cbox-modified.xml  cbox-whitted.xml
scenes/pa5/ajax/: ajax-rough.exr  ajax-rough.xml
scenes/pa5/cbox/: cbox_mats.exr
src/: main.cpp
src/bsdfs/: bsdf.h  dielectric.cpp  diffuse.cpp  diffuse.h  microfacet.cpp  mirror.cpp
src/core/: color.cpp  color.h  common.cpp  common.h  memory.cpp  memory.h  object.cpp  object.h  parser.cpp  parser.h  propsList.cpp  propsList.h  ray.h  transform.h  vector.h
src/image/: bitmap.cpp  bitmap.h  block.cpp  block.h  gui.cpp  gui.h  rfilter.cpp  rfilter.h
src/integrators/: distributed.cpp  integrator.h  normals.cpp  normals.h  pathEms.cpp  pathMats.cpp  pathMis.cpp
src/lights/: areaLight.cpp  areaLight.h  directionalLight.cpp  emitter.h  pointLight.cpp
src/primitives/: bbox.h  emitter.h  frame.h  mesh.cpp  mesh.h  objMesh.cpp  objMesh.h  ray.h  transform.h  vector.h
src/scene/: accel.cpp  accel.h  camera.cpp  camera.h  scene.cpp  scene.h
src/textures/: basicTextures.cpp  imageTexture.cpp  imageTexture.h  mipmap.cpp  mipmap.h  texture.cpp  texture.h
src/utils/: dpdf.h  imageIo.cpp  imageIo.h  parser.cpp  parser.h  resolver.h  sampler.cpp  sampler.h  timer.h  warp.cpp  warp.h
